# Ajuna

node/service/src/chain_spec/: solo.rs
pallets/gamestate/: Cargo.toml
pallets/gamestate/src/: lib.rs
runtime/solo/: Cargo.toml
runtime/solo/src/: lib.rs
